added -parallel flag stops go test from spawning child processes

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ cache:
 
 script:
   - ./.gofmt.sh
-  - travis_wait 40 go test ./...
-  - travis_wait 40 go test -race ./...
+  - travis_wait 40 go test -parallel 1 ./...
+  - travis_wait 40 go test -parallel 1 -race ./...
 
 # GO111MODULE will force Go modules
 # This will be unnecessary when Go 1.13 lands.
