--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ script:
     while sleep 5m; do
       echo "====[ $SECONDS seconds running time ]===="
     done &
-  - go test -parallel 1 ./...
-  - go test -parallel 1 -race ./...
+  - go test -parallel 1 -timeout 45 ./...
+  - go test -parallel 1 -race -timeout 45 ./...
 
 # GO111MODULE will force Go modules
 # This will be unnecessary when Go 1.13 lands.
