removed singe thread test flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ cache:
 
 script:
   - ./.gofmt.sh
-  - go test -parallel 1 -timeout 45m ./...
-  - go test -parallel 1 -race -timeout 45m ./...
+  - go test -timeout 45m ./...
+  - go test -race -timeout 45m ./...
 
 # GO111MODULE will force Go modules
 # This will be unnecessary when Go 1.13 lands.
